--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,8 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <!--that div with overLays is for portal use-->
+    <div id="overLays"></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
